--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,5 @@
     <div>eta: {{item.age}}</div>
     <div *ngIf="i!=items.length-1">-------------</div>
 </div>
+<input [(ngModel)]="value" />
+<div (click)="showValue()" class="stupidClass">Mostra Valore</div>
