--- a/src/app/listComponent/list.component.html
+++ b/src/app/listComponent/list.component.html
@@ -1,6 +1,6 @@
-<div *ngFor="let item of items; let i=index">
+<div *ngFor="let item of items; let i=index" (click)="showData(item)">
     <div>tipo: {{item.type}}</div>
-    <div>nome: {{item.name}}</div>s
+    <div>nome: {{item.name}}</div>
     <div>eta: {{item.age}}</div>
     <div *ngIf="i!=items.length-1">-------------</div>
 </div>
