--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </h1>
 </div>
 <list [items]="items"></list>
-<input [(ngModel)]="value" />
+<after-view></after-view>
 <div (click)="showValue()" class="stupidClass">Mostra Valore</div>
 
 <detail>
