--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-    <h1>
-        {{ title }}
-    </h1>
-</div>
-<list [items]="items"></list>
-<after-view></after-view>
-<div (click)="showValue()" class="stupidClass">Mostra Valore</div>
-
-<detail>
-
-</detail>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<!--è il nostro gestore delle pagine-->
