modifiche alla lista e alla classe character

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
-<div>
-    <a>home</a>
-    <a>lista</a>
-    <a>dettaglio</a>
+<div class="header">
+    <div routerLink="/home" routerLinkActive="selected">Home</div>
+
+    <div routerLink="/list" routerLinkActive="selected">List</div>
+
 </div>
