everything work correctly also the edit page

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,4 +5,10 @@
 .header>div {
     display: inline-block;
     cursor: pointer;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.header {
+    margin-bottom: 20px;
 }
