--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,5 @@
     <div routerLink="/home" routerLinkActive="selected">Home</div>
 
     <div routerLink="/list" routerLinkActive="selected">List</div>
-
+    <div routerLink="/edit" routerLinkActive="selected">Edit</div>
 </div>
