--- a/src/app/listComponent/list.component.html
+++ b/src/app/listComponent/list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items; let i=index" (click)="showData(item)">
+<div *ngFor="let item of items; let i=index" (click)="selectItem(item)">
     <div>tipo: {{item.type}}</div>
     <div>nome: {{item.name}}</div>
     <div>eta: {{item.age}}</div>
