--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,4 +3,6 @@
     <div>tipo: {{characterSelected?.type}}</div>
     <div>nome: {{characterSelected?.name}}</div>
     <div>eta: {{characterSelected?.age}}</div>
+    <button (click)="backList()">Indietro</button>
+    <button (click)="edit()">modifica</button>
 </div>
